<resources>
    <string name="app_name">Daily.Maps</string>

    <string name="GOOGLE_API_KEY">AIzaSyCYNQi2CRU93nOth7mo4tfmfK1ohKJuoGM</string>

    <!-- FireStore Collections Names -->
    <string name="firestore_collection_users">users</string>
    <string name="firestore_collection_tasks">tasks</string>
    <string name="firestore_collection_templates">templates</string>
    <string name="firestore_collection_settings">settings</string>

    <!-- Application Intro -->
    <string name="first_slide_title">Добро Пожаловать!</string>
    <string name="first_slide_description">Daily.Maps - органайзер №1 во всём мире!</string>
    <string name="second_slide_title">Возьмите Время в Свои Руки!</string>
    <string name="second_slide_description">Гибко настривайте свои задания и сортируйте их по группам и шаблонам.</string>
    <string name="third_slide_title">Будьте Продуктивны!</string>
    <string name="third_slide_description">Daily.Maps берёт работу по оптимизации вашего маршрута на себя.</string>

    <!-- Input Elements Placeholders etc. -->
    <string name="email_hint_text">E-mail</string>
    <string name="password_hint_text">Пароль</string>
    <string name="confirm_password_hint_text">Подтверждение</string>
    <string name="login_button_hint_text">Авторизоваться</string>
    <string name="register_button_hint_text">Зарегестрироваться</string>
    <string name="register_link_text">Ещё не зарегестрированы?</string>

    <!-- SnackBars Messages -->
    <string name="error_auth">Не удалось авторизироваться. Попробуйте позже.</string>
    <string name="error_passwords_matching">Пароли не совпадают. Провертье правильность введённых данных.</string>
    <string name="error_empty_fields">Пожалуйста, заполните все необходимые поля!</string>
    <string name="succes_task_saved">Новое задание успешно сохранено.</string>


    <!-- Bottom Navigation Labels -->
    <string name="label_tab_1">Главная</string>
    <string name="label_tab_2">Добавить</string>
    <string name="label_tab_3">Профиль</string>

    <!-- Page Titles -->
    <string name="task_list_title">ЗАДАЧИ</string>
    <string name="add_task_title">ДОБАВЛЕНИЕ ЗАДАНИЯ</string>

    <!-- Location Permission Texts -->
    <string name="title_location_permission">Нет доступа к геоданным</string>
    <string name="text_location_permission">Для нормальной работы приложеняи необходим доступ к геолокации.</string>
    <string name="ok_location_permission">Окей</string>

    <!-- Add Task Fields -->
    <string name="time_field_title">Время начала</string>
    <string name="duration_field_title">Продолжительность</string>
    <string name="priority_field_title">Приоритет</string>
    <string name="time_field_input_placeholder">12:00</string>
    <string name="duration_field_input_placeholder">15 мин</string>
    <string name="priority_field_input_placeholder">Средняя важность</string>

</resources>
