<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_close_gray_24dp">

            <TextView
                android:id="@+id/task_list_page_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/add_task_title"
                android:textColor="@color/pageTitleTextColor"
                android:textSize="@dimen/addTaskTitleTextSize" />

            <ImageButton
                android:id="@+id/ready_button"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="right"
                android:background="@color/backgroundColor"
                app:srcCompat="@drawable/ic_done_gray_24dp" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="4dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/time_field_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center"
                        android:text="@string/time_field_title"
                        android:textSize="@dimen/addTaskFieldTitlesTextSize" />

                    <TextView
                        android:id="@+id/time_field_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center"
                        android:padding="@dimen/addTaskFieldInputPadding"
                        android:text="@string/time_field_input_placeholder"
                        android:textSize="@dimen/addTaskFieldInputTextSize" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/duration_field_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center"
                        android:text="@string/duration_field_title"
                        android:textSize="@dimen/addTaskFieldTitlesTextSize" />

                    <TextView
                        android:id="@+id/duration_field_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center"
                        android:padding="@dimen/addTaskFieldInputPadding"
                        android:text="@string/duration_field_input_placeholder"
                        android:textSize="@dimen/addTaskFieldInputTextSize" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/priority_field_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center"
                        android:text="@string/priority_field_title"
                        android:textSize="@dimen/addTaskFieldTitlesTextSize" />

                    <TextView
                        android:id="@+id/priority_field_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center"
                        android:paddingTop="@dimen/addTaskPriorityFieldInputPadding"
                        android:paddingBottom="@dimen/addTaskPriorityFieldInputPadding"
                        android:text="@string/priority_field_input_placeholder"
                        android:textSize="@dimen/addTaskPriorityFieldInputTextSize" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="10dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="0.0px"
                    android:elevation="8dp"
                    app:cardBackgroundColor="@color/backgroundColor"
                    app:cardElevation="10dp"
                    app:cardPreventCornerOverlap="false">

                    <com.google.android.gms.maps.MapView
                        android:id="@+id/map"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>